# matrix-bot-ical

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  bot.toml.example
src/: config.rs  ical.rs  lib.rs  main.rs
